# blueline

./: .CHANGELOG.md.swp  .gitignore  .swp  CHANGELOG.md  CI_MODE_ANALYSIS.md  CLAUDE.md  Cargo.toml  MVVM_TRANSITION_STRATEGY.md  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_v1.md  REFACTORING_PLAN_v2.md  SESSION_NOTES.md  debug_test.rs  deny.toml  issue3.md  issue4.md  issue5.md  issues.list  issues.md  package-lock.json  profile.example  release.sh  test_commit.txt  test_display_fixes.rs  test_ghost_cursor.sh  test_profile.rs  test_request.txt  test_result.txt  test_wrap.rs  test_wrap_debug.feature  test_wrap_fix.feature
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  cucumber-tests.yml  release.yml  release.yml.disabled
archive/legacy-debugging-features/: double_byte_rendering_bug.feature  integration.feature  terminal_rendering_simple.feature  terminal_rendering_working.feature
archive/mvc/: lib.rs  main.rs  repl.rs  testing.rs
docs/: ARCHITECTURE.md  BQL.md  CHANGELOG.md  COMMANDS.md  DEVELOPER_GUIDE.md  DEV_ARCHITECTURE.md  DEV_CODING.md  DEV_DEBUG.md  DEV_GUIDE.md  DEV_TEST.md  DEV_WORKFLOW.md  DOD.md  DRY_MOVEMENT_REFACTORING.md  FAREWELL_OLD_REPL.md  ISSUES.md  IS_RELEVANT_REFACTORING.md  MVVM_ARCHITECTURE.md  MVVM_REFACTORING_EXAMPLES.md  PAGE_SCROLLING_ANALYSIS.md  REFACTORING_SUMMARY.md  RELEASE_PROCESS.md  RELEASE_SETUP.md  REPL.md  REPL_ISSUES.md  REPL_REFACTORING.md  SECURITY.md  TEST_ARCHITECTURE.md  TEST_RULES.md
features/: application.feature  arrow_keys_all_modes.feature  blueline.feature  command_line.feature  cursor_flicker_fix.feature  cursor_visibility.feature  editing.feature  http_request_flow.feature  integration.feature  mode_transitions.feature  move_to_next_word.feature  movement.feature  navigation_command.feature  real_application_bug.feature  real_vte_bug_test.feature  screen_refresh.feature  screen_refresh_keyevents.feature  screen_refresh_modechanges.feature  screen_refresh_shutdown.feature  screen_refresh_startup.feature  screen_refresh_textchanges.feature  terminal_rendering.feature  test_response_navigation.feature  text_advanced.feature  text_deletion.feature  text_editing.feature  text_insert_mode.feature  text_navigation.feature  unicode_support.feature  visual_mode.feature  window.feature
scripts/: deb-postinstall.sh  git-commit-precheck.sh  install-hooks.sh  setup-claude-hooks.sh  setup-profile.sh
src/: cmd.rs  cmd_args.rs  config.rs  debug_capture.rs  debug_visual_mode.rs  ini.rs  lib.rs  main.rs  repl.rs  terminal_test_framework.rs  test_single_line_response.rs
src/mvvm/: commands.rs  controller.rs  events.rs  models.rs  view_models.rs  views.rs
src/repl/: command.rs  commands.rs  controller.rs  event_bus.rs  events.rs  geometry.rs  http.rs  main.rs  mod.rs  model.rs  new_repl.rs  test_response_wrapping.rs  testing.rs  view.rs  view_model.rs  view_models.rs  views.rs
tests/: integration_basic_editing.rs  integration_tests.rs  mock_test.rs  single_test.rs  test_backspace_display_cursor.rs
tests/common/: debug_test.rs  mock_view.rs  mod.rs  steps.rs  terminal_state.rs  world.rs
tests/features/: application_lifecycle.feature  arrow_keys_all_modes.feature  command_line.feature  cursor_doublebyte.feature  cursor_doublebyte_edge.feature  cursor_visibility.feature  horizontal_scrolling.feature  horizontal_scrolling_multibyte.feature  horizontal_scrolling_precise.feature  http_request_flow.feature  issue_190_visual_delete_multibyte.feature  issue_80_regression.feature  line_number_toggle.feature  mode_transitions.feature  navigation_command.feature  normal_mode_d_command.feature  normal_mode_dd_command.feature  normal_mode_x_command.feature  response_navigation.feature  scroll_amount_debug.feature  scroll_amount_validation.feature  tab_handling.feature  text_advanced.feature  text_append_doublebyte.feature  text_deletion.feature  text_insert_mode.feature  unicode_support.feature  visual_block_commands.feature  visual_character_deletion.feature  visual_line_block_deletion.feature  window.feature  wrap_mode.feature  wrap_syntax.feature  yank.feature
tests/steps/: application.rs  application_lifecycle.rs  command_line.rs  (+19 more)
(+105 files in other folders)
