[package]
name = "blueline"
version = "0.44.1"
authors = ["Sam Wisely <samwisely75@gmail.com>"]
description = "A lightweight, profile-based HTTP client with REPL interface"
edition = "2021"
license = "Elastic-2.0"
repository = "https://github.com/samwisely75/blueline"
homepage = "https://github.com/samwisely75/blueline"
readme = "README.md"
keywords = ["http", "client", "cli", "repl", "api"]
categories = ["command-line-utilities", "web-programming::http-client"]

# Package metadata for deb/rpm generation
[package.metadata.deb]
maintainer = "Sam Wisely"
copyright = "2025, Sam Wisely"
extended-description = "A fast, modern HTTP client with REPL interface and profile-based configuration for the command line. Features vi-style navigation and interactive HTTP request testing."
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/blueline", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/blueline/", "644"],
]

[package.metadata.generate-rpm]
license = "Elastic-2.0"
summary = "A lightweight, profile-based HTTP client with REPL interface"
post_install_script = """echo "Setting up blueline..."
echo "blueline installed successfully!"
echo "See documentation: https://github.com/samwisely75/blueline\""""
assets = [
    { source = "target/release/blueline", dest = "/usr/bin/blueline", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/blueline/README.md", mode = "644" },
]

[dependencies]
bluenote = { git = "https://github.com/samwisely75/bluenote.git", branch = "main" }
anyhow = "1.0"
tokio = { version = "1.44.0", features = ["full"] }
clap = { version = "4.5.28", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "chrono", "env-filter" ] }
tracing-appender = "0.2"
serde_json = "1.0"
crossterm = "0.28"
colored = "2.0"
humantime = "2.1"
unicode-width = "0.1"
unicode-segmentation = "1.11"
cjk = "0.2"
vte = "0.13"
shellexpand = "3.1"
arboard = "3.4"
bitflags = "2.6"
# rustyline = "12.0"

[dev-dependencies]
tempfile = "3.19.1"
cucumber = "0.21.1"
tokio-test = "0.4"
wiremock = "0.6"
serial_test = "3.2"
vte = "0.13"
